--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,38 +1,213 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<title>Lifto</title>
+	<meta charset="UTF-8">
+	<meta name="description" content="Labs - Design Studio">
+	<meta name="keywords" content="lab, onepage, creative, html">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- Favicon -->
+	<link href="../../assets/img/favicon.ico" rel="shortcut icon"/>
+
+	<!-- Google Fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Oswald:300,400,500,700|Roboto:300,400,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Germania+One" rel="stylesheet">
+	<!-- Stylesheets -->
+	<link rel="stylesheet" href="../../assets/css/bootstrap.min.css"/>
+	<link rel="stylesheet" href="../../assets/css/font-awesome.min.css"/>
+	<link rel="stylesheet" href="../../assets/css/flaticon.css"/>
+	<link rel="stylesheet" href="../../assets/css/magnific-popup.css"/>
+	<link rel="stylesheet" href="../../assets/css/owl.carousel.css"/>
+	<link rel="stylesheet" href="../../assets/css/style.css"/>
 
 
-<div class="main">
-  <div class="wrapper">
-    <form [formGroup]="messageForm" (ngSubmit)="onSubmit()">
-      <div class="form-row align-items-center">
-        <div class="col-auto">
-          <label class="sr-only" for="inlineFormInput">Name</label>
-          <div class="input-group mb-2">
-            <div class="input-group-prepend">
-              <div class="input-group-text">@</div>
-            </div>
-            <input type="text" formControlName="depart" class="form-control mb" id="inlineFormInputGroup" placeholder="depart">
-          </div>
-        </div>
-        <div class="col-auto">
-          <label class="sr-only" for="inlineFormInputGroup">Username</label>
-          <div class="input-group mb-2">
-            <div class="input-group-prepend">
-              <div class="input-group-text">@</div>
-            </div>
-            <input type="text" formControlName="arrive" class="form-control mb" id="inlineFormInputGroup" placeholder="arrivee">
-          </div>
-        </div>
-        <div class="col-auto">
-          <div class="input-group mb-2">
-            <div class="dates">
-                    <input type="text" class="form-control" id="usr1" name="event_date" placeholder="YYYY-MM-DD" autocomplete="off" >
-            </div>
-          </div>
-        </div>
-        <div class="col-auto">
-          <button type="submit" class="btn btn-primary mb-2">Proposer un trajet</button>
-        </div>
-      </div>
-    </form>
+	<!--[if lt IE 9]>
+	  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+	  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+	<![endif]-->
+
+</head>
+<body>
+  
+  
+
+
+	<!-- Intro Section -->
+	<div class="sec">
+    <div class="containers">
+        <h1>PARTAGEZ <div style="color: rgb(4, 132, 136); text-shadow: 0 0 10px rgb(255, 255, 255); display:inline-block;" class="facile">FACILEMENT</div> VOS TRAJETS QUOTIDIENS</h1>
+        <br/>
+        <h3>VOUS ALLEZ DANS LA MÊME DIRECTION ? <br/> <div style="color: rgb(4, 132, 136); text-shadow: 0 0 10px rgb(255, 255, 255); display:inline-block;" class="facile">DINI</div> &nbsp; <div style="color: rgb(185, 40, 40); text-shadow: 0 0 10px rgb(255, 255, 255); display:inline-block;" class="facile">M3AK !</div></h3>
+    </div>
   </div>
-</div>
+	<!-- Intro Section -->
+  
+
+
+	<!-- About section -->
+	<div class="about-section">
+		<div class="overlay"></div>
+		<!-- card section -->
+		<div class="card-section">
+			<div class="container">
+				<div class="row">
+					<!-- single card -->
+					<div class="col-md-3 col-sm-3">
+						<div class="lab-card">
+							<div class="icon">
+								<img src="../../assets/img/suitcase.png">	
+							</div>
+							<p>Si vous voyagez avec des bagages ou de l’équipement d’une taille ou forme inhabituelle, prévenez le conducteur pour trouver un arrangement. </p>
+						</div>
+					</div>
+					<!-- single card -->
+					<div class="col-md-3 col-sm-3">
+						<div class="lab-card">
+							<div class="icon">
+								<img src="../../assets/img/stopwatch.png">
+							</div>
+							
+							<p>Vous partez dans 5 minutes ? Pas de problème, Dini M3ak vous met en relation instantanément. Pas besoin de prévoir vos déplacements à l'avance ...</p>
+						</div>
+					</div>
+					<!-- single card -->
+					<div class="col-md-3 col-sm-3">
+						<div class="lab-card">
+							<div class="icon">
+								<img src="../../assets/img/location.png">
+							</div>
+							<p>Dini M3ak vous permet de trouver le point exact de votre départ en covoiturage et de localiser ses covoitureurs.</p>
+						</div>
+					</div>
+					<!-- single card -->
+					<div class="col-md-3 col-sm-3">
+						<div class="lab-card">
+							<div class="icon">
+								<img src="../../assets/img/money.png">
+							</div>
+							<p>Essence, péage, stationnement, contravention, les aspects économiques arrivent en tête des avantages reconnus au covoiturage.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- card section end-->
+
+
+		<!-- About contant -->
+		
+	</div>
+	<!-- About section end -->
+	
+	<!-- Testimonial section -->
+	<div id="services" class="testimonialo-section pb100">
+      <div class="testo-overlay"></div>
+      <div class="container">
+        
+      </div>
+    </div>
+	<!-- Testimonial section end-->
+
+
+
+	<!-- Testimonial section -->
+	<div class="testimonial-section pb100">
+		<div class="test-overlay"></div>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-8 col-md-offset-4">
+					<div class="section-title left">
+						<h2>Solution Pratique</h2>
+					</div>
+					<div class="phone_i">
+						<img src="../../assets/img/iphone.png" alt="">
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- Testimonial section end-->
+
+
+	
+
+
+	
+
+
+	<!-- Promotion section -->
+	<div id="joinus" class="promotion-section">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-9">
+					<h2>Vous voulez demander un covoiturage?</h2>
+					<p>Inscrivez-vous dès maintenant pour bénéficier de nos services.</p>
+				</div>
+				<div class="col-md-3">
+					<div class="promo-btn-area">
+						<a href="./demand" class="site-btn btn-3">Demandez ICI !</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- Promotion section end-->
+
+
+	<!-- Contact section -->
+	<div id="contact" class="contact-section spad fix">
+		<div class="container">
+			<div class="row">
+				<!-- contact info -->
+				<div class="col-md-5 col-md-offset-1 contact-info col-push">
+					<div class="section-title left">
+						<h2>Contactez Nous</h2>
+					</div>
+					<div class="socialmedia">
+						<img src="../../assets/img/inst.png">
+						<h3><a href="https://www.instagram.com/lifto.luggage/">www.instagram.com/Dini.M3ak/</a></h3>
+						<img src="../../assets/img/fb.png" alt="">
+						<h3><a href="https://web.facebook.com/LIFTO.LUGGAGE/">facebook.com/Dini.M3ak/</a></h3>
+
+					</div>
+					<h3 class="mt60">Main Office</h3>
+					<p class="con-item">Dini.M3ak@gmail.com</p>
+				</div>
+				<!-- contact form -->
+				<div class="col-md-6 col-pull">
+					<form class="form-class" id="con_form">
+						<div class="row">
+							<div class="col-sm-6">
+								<input type="text" name="name" placeholder="Votre nom">
+							</div>
+							<div class="col-sm-6">
+								<input type="text" name="email" placeholder="Votre email">
+							</div>
+							<div class="col-sm-12">
+								<input type="text" name="subject" placeholder="Objet">
+								<textarea name="message" placeholder="Message"></textarea>
+								<button class="site-btn">Envoyer</button>
+							</div>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- Contact section end-->
+
+
+
+
+
+
+
+	<!--====== Javascripts & Jquery ======-->
+	<script src="../../assets/js/jquery-2.1.4.min.js"></script>
+	<script src="../../assets/js/bootstrap.min.js"></script>
+	<script src="../../assets/js/magnific-popup.min.js"></script>
+	<script src="../../assets/js/owl.carousel.min.js"></script>
+	<script src="../../assets/js/circle-progress.min.js"></script>
+	<script src="../../assets/js/main.js"></script>
+</body>
+</html>
