--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -13,17 +13,16 @@
         color: #054752;
         margin-bottom: 40px;
     }
-    form{
-        display: grid;
-        .form-gr{
-            height: 60px;;
-            
-        }
-        .cta{
-            margin-left: auto;
-            margin-right: auto;
-            margin-top: 30px;
-            width: 50%;
-        }
+    form {
+        
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
     }
+
+
+ 
 }
